// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> calls helpers and renders correctly with external 1`] = `
<a
  className="link"
  href="/cabinet/"
  target="_blank"
>
  <span
    className="link-text link-white link-external"
  >
    TestLink
  </span>
  <span
    className="icon-external external-white"
  >
    <Icon
      icon={[Function]}
      inline={true}
      size={16}
    />
  </span>
</a>
`;

exports[`<Link /> calls helpers and renders correctly with pseudo 1`] = `
<a
  className="link link-can-be-hovered"
>
  <span
    className="link-text link-black link-underlined link-underlined-dashed"
  >
    TestLink
  </span>
</a>
`;

exports[`<Link /> calls helpers with right params and renders correctly without external 1`] = `
<a
  className="testClass link"
  href="/cart/?sort=price#test_anchor"
  relative={true}
  target="_self"
>
  <span
    className="link-text link-white link-underlined link-underlined-solid"
  >
    TestLink
  </span>
</a>
`;
